# docs-to-markdown

./: .gitignore  LICENSE.md  README.md  docs-to-markdown.py  docs_to_markdown.py  multi_doc_extract.py  pyproject.toml  requirements.txt
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
